methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:23: error: type mismatch;
 found   : Unit
 required: Boolean
    left()
        ^